<resources>
    <string name="app_name">Food Assessment</string>
    <string name="create_account">Create Account</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="height_unit">Height Unit</string>
    <string name="weight_unit">Weight Unit</string>
    <string name="register">Register</string>
    <string name="logo">غذاؤ</string>
    <string name="logoname">غذاؤ</string>
    <string name="logoname2">نا</string>
    <string name="logoname1">غذاؤ</string>
    <string name="loading_text">تحميل</string>
    <string name="loding_dots">...</string>
    <string name="text1">اهلا و سهلا بك سيدي العزيز</string>
    <string name="text2">يرجى منك ملئ هذه المعلومات بدقة</string>
    <string name="text3">للحصول على نتائج دقيقة</string>
    <string name="radiobtnmale">ذكر</string>
    <string name="radiobtnfemale">أنثى</string>
    <string name="brmname">:BRM</string>
    <string name="brmvalue">-</string>
    <string name="sign_up_btn">انشاء الحساب</string>
    <string name="text21">"لبدأ تنظيم الوجبات اختر \"ابدأ\" "</string>
    <string name="text22">لطلب المساعدة اختر \"مساعدة\"</string>
    <string name="brm_status">سمين</string>
    <string name="brmstatustitle">الحالة:</string>
    <string name="start_btn">ابدأ</string>
    <string name="help_btn">مساعدة</string>
    <string name="choose_food_btn">اختر وجباتك لهذا اليوم</string>
    <string name="graph_calc_btn">احسب النتائج</string>
    <string name="add_food_btn">أضف وجبة</string>
    <string name="go_back">الرجوع للصفحة السابقة</string>
</resources>