<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--for whole activity -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center|center_vertical"
            android:orientation="vertical">
            <!-- for logo -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairobold"
                    android:text="@string/logoname1"
                    android:textColor="#121212"
                    android:textSize="50dp"
                    app:autoSizeMaxTextSize="150px"
                    app:autoSizeMinTextSize="70px" />

                <TextView
                    android:id="@+id/brmvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairobold"
                    android:text="@string/logoname2"
                    android:textColor="#0069FF"
                    android:textSize="40dp"
                    app:autoSizeMaxTextSize="150px"
                    app:autoSizeMinTextSize="70px" />
            </LinearLayout>

            <!-- for text -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairobold"
                    android:text="@string/text1"
                    android:textColor="#707070"
                    android:textSize="20dp"
                    app:autoSizeMaxTextSize="150px"
                    app:autoSizeMinTextSize="70px" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairobold"
                    android:text="@string/text2"
                    android:textColor="#707070"
                    android:textSize="20dp"
                    app:autoSizeMaxTextSize="150px"
                    app:autoSizeMinTextSize="70px" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairobold"
                    android:text="@string/text3"
                    android:textColor="#707070"
                    android:textSize="20dp"
                    app:autoSizeMaxTextSize="150px"
                    app:autoSizeMinTextSize="70px" />
            </LinearLayout>

            <!-- for inputs -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <EditText
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:fontFamily="@font/cairo"
                    android:hint="العمر"
                    android:inputType="number" />


                <EditText
                    android:id="@+id/et_length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:fontFamily="@font/cairo"
                    android:hint="الطول"
                    android:inputType="numberDecimal" />


                <EditText
                    android:id="@+id/et_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:fontFamily="@font/cairo"
                    android:hint="الوزن"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <!-- for radio button gender -->
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingRight="20dp">

                <RadioButton
                    android:id="@+id/radio_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:paddingLeft="30dp"
                    android:text="@string/radiobtnmale"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/radio_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:text="@string/radiobtnfemale"
                    android:textSize="20dp" />

            </RadioGroup>

            <!-- for BRM -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingRight="20dp">


                <TextView
                    android:id="@+id/brm_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairobold"
                    android:text="@string/brmname"
                    android:textColor="#121212"
                    android:textSize="20dp"
                    app:autoSizeMaxTextSize="150px"
                    app:autoSizeMinTextSize="70px" />

                <TextView
                    android:id="@+id/brm_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairobold"
                    android:text="@string/brmvalue"
                    android:textColor="#089B0D"
                    android:textSize="20dp"
                    app:autoSizeMaxTextSize="150px"
                    app:autoSizeMinTextSize="70px" />
            </LinearLayout>

            <!-- for sign up button -->
            <Button
                android:id="@+id/help_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:background="#0069FF"
                android:fontFamily="@font/cairo"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:text="@string/sign_up_btn"
                android:textColor="#fff"
                android:textSize="20dp"
                app:strokeColor="#2196F3" />

            <!-- for sign up button -->
            <Button
                android:id="@+id/load_data_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:background="#0069FF"
                android:fontFamily="@font/cairo"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:text="load data"
                android:textColor="#fff"
                android:textSize="20dp"
                app:strokeColor="#2196F3" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>